# shades

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  gl.c  gl.h  glad.c  glad.h  glutils_impl.h  math.h  renderer.c  renderer.h  shades.c
